# tree-sitter-mdn

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  grammar.js  pyproject.toml  setup.py
bindings/python/tree_sitter_mdn/: binding.c
src/: grammar.json  parser.c
